tests/run-pass/main_fn.rs
#![feature(main)]

#[main]
fn foo() {
}
